# NOVA-SYNESIS

./: .env.example  .gitignore  Anweisung.md  Dockerfile  LICENSE  README.md  Schnellstart.md  fazit.md  pyproject.toml  run-backend.cmd  run-backend.ps1  uml.html  uml_V3.mmd
LIT/: README.md
Use_Cases/: README.md
docs/: README.md  Whitepaper.html  backend-runtime.html  backend-runtime.md  change-workflows.html  change-workflows.md  coverage.html  coverage.md  decision-guide.html  decision-guide.md  docs.md  fachartikel-nova-synesis.html  failure-playbook.html  failure-playbook.md  fazit-und-einordnung.html  frontend-editor.html  frontend-editor.md  getting-started.html  getting-started.md  handler-trust-and-approval.html  index.html  planner-and-lit.html  planner-and-lit.md  real-world-scenarios.html  real-world-scenarios.md  security-and-policy.html  security-and-policy.md  system-overview.html  system-overview.md
dokumentation/: README.md  Whitepaper.md  backend-runtime.md  change-workflows.md  coverage.md  decision-guide.md  fachartikel-nova-synesis.md  failure-playbook.md  frontend-editor.md  getting-started.md  handler-trust-and-approval.md  planner-and-lit.md  real-world-scenarios.md  security-and-policy.md  system-overview.md
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
tests/: test_orchestrator.py
tools/: build_code_release.ps1  build_web_docs.py  generate_docs.py
web/: Whitepaper.html  change-workflows.html  coverage.html  decision-guide.html  failure-playbook.html  frontend-editor.html  getting-started.html  (+4 more)
(+1070 files in other folders)
