[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-synesis"
version = "1.0.5"
description = "NOVA-SYNESIS: Neural Orchestration Visual Autonomy / Stateful Yielding Node-based Execution Semantic Integrated Surface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1",
    "httpx>=0.27,<1",
    "pydantic>=2.8,<3",
    "uvicorn>=0.30,<1",
    "websockets>=12,<16",
]

[project.optional-dependencies]
dev = [
    "markdown>=3.7,<4",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
]

[project.scripts]
nova-synesis = "nova_synesis.cli:main"
agent-orchestrator = "nova_synesis.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
